.tekton/trigger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-listener
  labels:
    name: github-listener
spec:
  ingressClassName: package-nginx
  rules:
  - host: nlevee-cicd.package.playground.padok.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: el-github-listener
            port: 
              number: 8080
  tls:
  - hosts:
      - nlevee-cicd.package.playground.padok.cloud
